Fixed border collapse in events

--- a/app/assets/stylesheets/events.css
+++ b/app/assets/stylesheets/events.css
@@ -1,4 +1,4 @@
-/*#events .calendar {*/
+#events .calendar {
   border-collapse: collapse;
   width: 100%;
 }
